# GraPainter

./: .gitignore  CMakeLists.txt
applications/: CMakeLists.txt
applications/a5/: CMakeLists.txt  canvas.cpp  canvas.h  config.cpp  config.h  drawcollection.cpp  drawcollection.h  main.cpp  particles.cpp  particles.h  player.cpp  player.h  rendering.cpp  rendering.h  util.h
applications/a5/grapainter/: canvas.cpp  canvas.h  config.cpp  config.h  game.cpp  game.h  imageframe.h  player.cpp  player.h  playercam.h  util.h
applications/a5/shader/: box.fs  box.vs  canvas.fs  copytex.fs  copytex.vs  deferred-debug.fs  deferred-lighting.fs  deferred-splats.fs  deferred-splats.gs  deferred-splats.vs  floor.fs  floor.vs  fog.fs  fog.vs  grapainter_canvas_painting.cs  grapainter_score_calculation.cs  particle-flare.fs  particle-flare.vs  pos+norm+tc,modulated.fs  pos+norm+tc.fs  pos+norm+tc.vs  pos+norm.fs  pos+norm.vs  pos+tc.vs  sky.fs  sky.vs
common/: CMakeLists.txt
common/cppgl/src/: anim.cpp  anim.h  camera-visualizer.cpp  camera.cpp  camera.h  context.cpp  drawelement.cpp  drawelement.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  named_handle.h  quad.h  query.cpp  query.h  shader.cpp  texture.cpp  texture.h
common/nlohmann_json/: CMakeLists.txt  README.md  convert_glm.cpp
common/nlohmann_json/include/nlohmann/: convert.hpp  convert_glm.hpp
